<resources>
    <string name="app_name">Lavender business</string>
    <string name="signin">Sign In</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer_name">Customer Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="phone_no">Phone Number</string>
    <string name="have_an_account_sign_in">Have an Account? Sign In!</string>
    <string name="complete_address">Complete Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="district">District</string>
    <string name="submit">Submit</string>
    <string name="save_changes">Save Changes</string>
    <string name="notification_update_package">Your user package changed</string>
    <string name="track_order">Track your order</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="shopping">Shopping</string>
    <string name="delivery">Delivery</string>
    <string name="shop">Shops</string>
    <string name="shipment">Shipment</string>
    <string name="shipping">Shipping</string>
    <string name="delivery_map">Delivery</string>
    <string name="welcome_msg">Welcome to Lavendar</string>
    <string name="platform_selection">Please choose platform required</string>
    <string name="otp_code">OTP Number</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="order_delivery">Delivery</string>
    <string name="order_shiping">Shipping</string>
    <string name="all_shop">All Shops</string>
    <string name="my_order">My Order</string>
    <string name="manage_discounts">Manage Discounts</string>
    <string name="add_product">Add Product</string>
    <string name="link_to_shop">Link To Shop</string>
    <string name="my_profile">My Profile</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="my_delivery">My Delivery</string>
    <string name="category">CATEGORY</string>
    <string name="category_small">Category</string>
    <string name="my_whishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="my_shipment">My Shipment</string>
    <string name="chat_list">Chat List</string>
    <string name="my_wallet">My Wallet</string>
    <string name="electronics">Electronics</string>
    <string name="automotive">Automotive</string>
    <string name="fashion">Fashion</string>
    <string name="more">More</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_company_name">Shop Company Name</string>
    <string name="shop_manager_name">Shop Manager Name</string>
    <string name="shop_location_note">Shop Location Note</string>
    <string name="shop_mobile_number">Shop Mobile Number</string>
    <string name="select_offer_type">Select Offer Type</string>
    <string name="select_shop">Select Shop/Branch</string>
    <string name="offer_end_date">Offer End Date:</string>
    <string name="offer_start_date">Offer Start Date</string>
    <string name="specification">Specification</string>
    <string name="discription">Description</string>
    <string name="agent">Agent :</string>
    <string name="selling_type">Selling Type</string>
    <string name="weight">Weight:</string>
    <string name="guarantee_In_year">Guarantee(In Year) :</string>
    <string name="weight_max_limit">Add Max Weight QTY</string>
    <string name="addon_max_limit">Add Max Addons QTY</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="brand">Brand:</string>
    <string name="fixed_price">Fixed Price</string>
    <string name="bid_min_amount">Bid Min. Amount</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Enter Barcode ID:</string>
    <string name="productsellingtype">Product Selling Type:</string>
    <string name="productcondition">Product Condition:</string>
    <string name="color">Color</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="code">Code :</string>
    <string name="bid_expiry_date">Bid Expiry Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="typeArr">
        <item>Search type</item>
    </string-array>
    <string-array name="categoryArr">
        <item>Select Category</item>
    </string-array>
    <string-array name="selectionArr">
        <item>Select Categories</item>
        <item>Delivery</item>
        <item>Shops</item>
        <item>Branch</item>

    </string-array>
    <string-array name="shopArr">
        <item>Select Shop/Branch</item>
    </string-array>
    <string name="bid">Bid</string>
    <string name="branch_list">Branch List</string>
    <string name="branch_details">Branch Detail</string>
    <string name="order_list">Order List</string>
    <string name="order_detail">Order Detail</string>
    <string name="add_offer">Add Offer</string>
    <string name="add_discounts">Add Discounts</string>
    <string name="my_bids">My Bids</string>
    <string name="your_offer">Your Offer</string>
    <string name="register_branch">REGISTER NEW BRANCH</string>
    <string name="bid_detail">Bid Detail</string>
    <string name="notification">Notification</string>
    <string name="advance_search">Advance Search</string>
    <string name="road_planner">Road Planner</string>
    <string name="buy_one_get_another">BUY ONE GET ANOTHER OFFER</string>
    <string name="conditional_offer">Conditional Discount</string>
    <string name="conditional_offer_lable">Conditional Offer</string>
    <string name="offer">Offers</string>
    <string name="qty1">Qty:</string>
    <string name="cart">Shop</string>
    <string name="my_account">My Account</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_cart_is_empty_n_there_are_no_items_in_your_cart">There are currently no items in \n your shopping cart.</string>
    <string name="cart_is_empty">Go Shopping</string>
    <string name="location">Location</string>
    <string name="street_name">Street Name</string>
    <string name="shop_information">Shop Information</string>
    <string name="view_products">View Products</string>
    <string name="start_chat">Start Chat</string>
    <string name="product_detail">Product Detail</string>
    <string name="bid_now">Bid now</string>
    <string name="bid_now_detail">Bid now</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="close">Close</string>
    <string name="amount">Amount</string>
    <string name="place_order">Place Order</string>
    <string name="update_bid">UPDATE BID</string>
    <string name="cancel_cap">CANCEL</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="home">Home</string>
    <string name="pls_enter_otp">Please enter OTP</string>
    <string name="enter_valid_otp">Enter valid OTP</string>
    <string name="ok">OK</string>
    <string name="pls_enter_valid_mobile">Please enter valid mobile number</string>
    <string name="login_verify">Login Verify</string>
    <string name="otp_has_been_sent_to_entered_number">OTP Has been sent to entered number.</string>
    <string name="pls_enter_shop_owner_name">Please enter Shop owner name</string>
    <string name="pls_enter_shop_owner_email">Please enter Shop owner email</string>
    <string name="pls_enter_shop_owner_mobile">Please enter Shop owner mobile number</string>
    <string name="pls_enter_shop_name">Please enter Shop name</string>
    <string name="pls_enter_shop_company_name">Please enter Shop company name</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="pls_enter_proper_password">Password length should be between 6 to 8</string>
    <string name="pls_enter_proper_password_delivery">Password length should be between 6 to 15</string>
    <string name="pls_enter_confirm_password">Please enter password</string>
    <string name="pls_enter_shop_mobile">Please enter shop mobile number</string>
    <string name="pls_enter_shop_phone">Please enter shop phone number</string>
    <string name="pls_enter_shop_fax">Please enter shop fax</string>
    <string name="pls_enter_valid_email">Please enter valid email</string>
    <string name="password_not_match">Password and Confirm password not match</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="input_key_phone_number">1234567890+-</string>
    <string name="pls_enter_phone_number">Please enter phone number</string>
    <string name="pls_enter_mobile_number">Please enter mobile number</string>
    <string name="pls_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="pls_enter_id_number">Please enter id number</string>
    <string name="pls_enter_company_name">Please enter company name</string>
    <string name="pls_enter_name">Please enter name</string>
    <string name="pls_enter_shop_manager_name">Please enter shop manager name</string>
    <string name="i_agree_terms">I agree to the Terms of Service(Terms of Service)</string>
    <string name="clear_all">Clear Wishlist</string>
    <string name="product_category">Product Category :</string>
    <string name="product_subcategory">Product Subcategory :</string>
    <string name="product_child_category">Product Child Category :</string>
    <string name="availability">Availability :</string>
    <string name="view_more">View More</string>
    <string name="view_less">View Less</string>
    <string name="similar_items">Similar Items</string>
    <string name="popular_items">Popular</string>
    <string name="popular_items_new_text">Shopping</string>
    <string name="popular_category">Popular Category</string>
    <string name="popular_products">Popular Products</string>
    <string name="pls_enter_start_date">Please enter start date</string>
    <string name="name">Name : </string>
    <string name="to">to</string>
    <string name="valid_from">Valid From</string>
    <string name="enter_your_shipment_charges">Enter your Delivery Shipment Charges</string>
    <string name="shop_review">Shop Review</string>
    <string name="delivery_review">Delivery Review</string>
    <string name="shop_rating">Shop Rating</string>
    <string name="delivery_rating">Delivery Rating</string>
    <string name="subscribe_newslet">Subscribe Newsletter</string>
    <string name="subscribe">Subscribe</string>
    <string name="cancle">Cancel</string>
    <string name="user_name">Enter Name</string>
    <string name="next">Next Step</string>
    <string name="phone_number">Phone Number</string>
    <string name="fax">Fax</string>
    <string name="go_to_shop">Go to shop</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="offer_type">Offer Type</string>
    <string name="feedback">Feedback</string>
</resources>