<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/tvShopInfo"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/shop_information"
        android:textAppearance="@android:style/Widget.ActionBar.TabText"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/tvViewProducts"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/view_products"
        android:textAppearance="@android:style/Widget.ActionBar.TabText"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/tvGoToShop"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/go_to_shop"
        android:textAppearance="@android:style/Widget.ActionBar.TabText"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/tvStartChat"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/start_chat"
        android:textAppearance="@android:style/Widget.ActionBar.TabText"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size" />

</LinearLayout>