<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dialog_language"
    android:layout_width="270dp"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_enter_phone_back">

    <LinearLayout
        android:id="@+id/dll_lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:padding="8dp"
            android:gravity="center"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_newslet"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size" />

        <EditText
            android:id="@+id/dnl_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/header_text_size"
            android:inputType="textPersonName"
            android:background="@drawable/round_edittext"
            android:hint="@string/user_name"
            android:padding="10dp" />
        <EditText
            android:id="@+id/dnl_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textWebEmailAddress"
            android:background="@drawable/round_edittext"
            android:hint="@string/email"
            android:textSize="@dimen/header_text_size"
            android:padding="10dp" />
        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/dll_lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@color/white">

        <TextView
            android:id="@+id/dnl_tvSubscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/header_text_size"
            android:text="@string/subscribe"
            android:background="@drawable/drawable_rectangle_round_edge_primary_color"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dnl_tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/cancle"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:background="@color/white"/>

    </LinearLayout>

</RelativeLayout>
