<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fpd_cvOfferDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
    android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fpd_ivOfferProduct"
                android:src="@drawable/image_placeholder"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="8dp"
                    android:id="@+id/fpd_tvOfferProductName"
                    android:text="@string/product_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/header_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/fpd_tvOfferType"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@string/offer_type"
                    android:textStyle="bold"
                    android:textSize="@dimen/content_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/fpd_tvOfferCondition"
                    android:layout_marginTop="8dp"
                    android:text="@string/offer"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fpd_llDate"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/valid_from"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fpd_tvOfferStartDate"
                android:text="@string/offer_start_date"
                android:textSize="13sp"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="4dp"
                android:text="@string/to"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="4dp"
                android:id="@+id/fpd_tvOfferEndDate"
                android:text="@string/offer_start_date"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

<!--
</android.support.v7.widget.CardView>-->
