<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ffp_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/content_text_size" />

        <EditText
            android:id="@+id/ffp_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:padding="10dp"
            android:textSize="@dimen/content_text_size" />


        <EditText
            android:id="@+id/ffp_etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/feedback"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="10dp"
            android:lines="4"
            android:maxLines="3"
            android:textSize="@dimen/content_text_size" />



    </LinearLayout>

    <Button
        android:id="@+id/ffp_btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/header_text_size"
        android:background="@drawable/btn_round_shap_primery_color"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"/>

</RelativeLayout>
